--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Mike Ornstein, Human
+email: mike@mikeornstein.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Personal site of Mike Ornstein. Not the football scandal guy or the actor.
+  Another one. Los Angeles based engineering generalist, currently working
+  at SpaceX. Enjoyer of food eating, picture taking, book reading, car driving,
+  robot building, and lately AI.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+url: "http://mikeornstein.com" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: mikeornstein
+github_username:  mikeornstein
+linkedin_username: mike-ornstein
+instagram_username: slippery_salmonz
 
 # Build settings
 theme: minima
